# MyOpenGLStudyProject

./: MyOpenGLStudyProject.sln
Code/: AssimpMeshConverter.h  CMakeLists.txt  Geometry.h  Main.cpp  Model.h  ModelTypes.h  Primitive.h
Code/Client/: CMakeLists.txt  ClientLog.h  Main.cpp
Code/Common/: CommonTypes.h
Code/LibraryCode/: glad.c
Code/ThirdLibrary/assimp/: CMakeLists.txt
Code/ThirdLibrary/assimp/code/: CMakeLists.txt
Code/ThirdLibrary/assimp/contrib/irrXML/: CMakeLists.txt
Code/ThirdLibrary/assimp/contrib/zlib/: CMakeLists.txt
Code/ThirdLibrary/easyloggingpp/: CMakeLists.txt
Code/ThirdLibrary/glad/: CMakeLists.txt  glad.c  glad.h
Code/ThirdLibrary/glfw/: CMakeLists.txt
Code/ThirdLibrary/glfw/src/: CMakeLists.txt
Code/ThirdLibrary/stb_image/: CMakeLists.txt
Code/World/: CMakeLists.txt  MeshData.h
MyOpenGLStudyProject/: MyOpenGLStudyProject.vcxproj  MyOpenGLStudyProject.vcxproj.filters
Resource/Shader/: Project1.vs
Src/Shaders/: Project1.fs
ThirdLibrary/Include/glad/: glad.h
